--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 transformers==4.34.0
-torch==1.10.0+cu121
-torchvision==0.11.1+cu121
-torchaudio==0.10.0+cu121
+torch>=1.10.0
+torchvision>=0.11.1
+torchaudio>=0.10.0
